# enpm702-fall-2025-ROS

./: .gitignore
Lecture11/launch_files_demo/launch/: demo5.launch.py
Lecture11/robot_custom_interfaces/: CMakeLists.txt
Lecture11/robot_custom_interfaces/action/: NavigateToPose.action
Lecture11/robot_custom_interfaces/srv/: SetGoal.srv
Lecture12/bot_controller_demo/: CMakeLists.txt  package.xml
Lecture12/bot_controller_demo/include/bot_controller_demo/: proportional_controller.hpp  random_controller.hpp
Lecture12/bot_controller_demo/launch/: proportional_controller.launch.py  random_controller.launch.py
Lecture12/bot_controller_demo/src/: proportional_controller.cpp  random_controller.cpp
Lecture12/navigation_demo/: CMakeLists.txt  package.xml
Lecture12/navigation_demo/include/navigation_demo/: navigate_to_pose_client.hpp  navigate_to_pose_server.hpp  set_goal_client.hpp  set_goal_server.hpp
Lecture12/navigation_demo/src/: navigate_to_pose_client.cpp  navigate_to_pose_server.cpp  set_goal_client.cpp  set_goal_server.cpp
Lecture12/parameters_demo/: CMakeLists.txt  package.xml
Lecture12/parameters_demo/config/: parameters_demo.yaml  two_cameras_params.yaml
Lecture12/parameters_demo/include/parameters_demo/: camera_demo.hpp  color_utils.hpp  lidar_demo.hpp  processing_demo.hpp  radar_demo.hpp
Lecture12/parameters_demo/launch/: demo1.launch.py  demo2.launch.py  demo3.launch.py  demo4.launch.py
Lecture12/parameters_demo/src/: camera_demo.cpp  lidar_demo.cpp  processing_demo.cpp  radar_demo.cpp
docs/source/lecture10/: exercises.rst  lecture.rst  lecture10.rst
final_starter/micromouse_cpp/src/: micromouse_node.cpp
rwa5/micromouse_project/log/: latest_list
rwa5/micromouse_project/micromouse_cpp/config/: params.yaml
rwa5/micromouse_project/micromouse_cpp/src/: get_status_client.cpp  micromouse_node.cpp  navigate_action_client.cpp
rwa5/micromouse_project/micromouse_interfaces/: CMakeLists.txt  package.xml
rwa5/rwa5/src/: navigate_action_client.cpp
rwa5/src/: get_status_client.cpp
