<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parameters_demo</name>
  <version>0.0.0</version>
  <description>A ROS2 demonstration package showcasing parameter management, dynamic
    reconfiguration, and parameter validation techniques. This package provides practical examples
    of parameter declaration with descriptors, runtime parameter updates, parameter constraints and
    ranges, callback-based parameter handling, and integration with sensor data processing including
    camera and radar systems.</description>
  <maintainer email="zeid.kootbally@nist.gov">zeid</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>radar_msgs</depend>
  <depend>rcl_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>